infra/k8s/order-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-app
  namespace: apps
  labels:
    app: order-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-app
  template:
    metadata:
      labels:
        app: order-app
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "8081"
    spec:
      terminationGracePeriodSeconds: 30
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: devapp-registry-auth
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: order-app
        image: nexus.swirlit.internal:5000/devapp/order-app:v5
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
        ports:
        - containerPort: 8081
        startupProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8081
          periodSeconds: 5
          failureThreshold: 24
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8081
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8081
          periodSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 384Mi
          limits:
            cpu: "1"
            memory: 768Mi
        volumeMounts:
          - name: tmp
            mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: order-app
  namespace: apps
  labels:
    app: order-app
spec:
  selector:
    app: order-app
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
